# periphery

./: .gitignore  Proxy.json  README.md  setup.cfg
contracts/account/: Account.cairo  IAccount.cairo  README.md  library.cairo
contracts/introspection/: ERC165.cairo
contracts/proxy/: Proxy.cairo  Upgradable.cairo
src/periphery/: __init__.py
src/periphery/account/: Account.cairo  IAccount.cairo  library.cairo
src/periphery/introspection/: ERC165.cairo
src/periphery/proxy/: Proxy.cairo  library.cairo
src/periphery/test/: dapp.cairo
src/periphery/utils/: constants.cairo
tests/: account.py  proxy.py
tests/utils/: TransactionSender.py  misc.py
